ipc/ipdl/test/ipdl/ok/array_Basic.ipdl
protocol array_Basic {
child:
    async Msg(int[] array);
};
