ipc/ipdl/test/ipdl/error/PIntrNested.ipdl
//error: intr message `Msg' cannot specify [Nested]

intr protocol PIntrNested {
child:
  [Nested=inside_sync, LegacyIntr] intr Msg();
};
